Fix mobile scrolling z-index issue

--- a/index.css
+++ b/index.css
@@ -62,6 +62,11 @@ body {
     color: white;
     transition: transform 1s, opacity 1s;
     border-radius: 2px;
+    pointer-events: none;
+}
+
+.carousel__cell.active {
+    pointer-events: auto;
 }
 
 
@@ -358,6 +363,15 @@ h5 {
         width: 100%;
         height: 80%;
         top: 0px;
+        overflow: hidden;
+    }
+
+    .carousel__cell.active {
+        overflow: scroll;
+    }
+
+    body,html {
+        overflow: hidden;
     }
 
     .scene {
